--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <span class="names-right">Книги</span>
               <span class="names-right">Блог</span>
             </div>
-            <button class="header-button">Получить</button>
+            <button data-toggle="modal" class="header-button">Получить</button>
           </div>
           <!-- /.header-right -->
         </div>
@@ -50,7 +50,9 @@
               стратегиями ценообразования на творческую работу.
             </span>
             <div class="theory-buttons">
-              <button class="theory-buttons__one">КУПИТЬ СЕЙЧАС</button>
+              <button data-toggle="modal" class="theory-buttons__one">
+                КУПИТЬ СЕЙЧАС
+              </button>
               <form action="index.html">
                 <button class="theory-buttons__two">ЧИТАТЬ ДЕМО</button>
               </form>
@@ -827,9 +829,51 @@
       <div class="modal__overlay"></div>
       <!-- /.modal__overlay -->
       <div class="modal__dialog">
-        <a href="img/" class="modal__close"></a>
+        <a href="#" class="modal__close"
+          ><img src="img/close.svg" alt="icon: close"
+        /></a>
+        <h3 class="modal__title modal__title--mb-1">Buy a book</h3>
+        <form action="send.php" method="POST" class="modal__form form">
+          <div class="modal__input-group">
+            <input
+              type="text"
+              class="input modal__input"
+              placeholder="Your Full Name*"
+              name="name"
+              required
+              minlength="2"
+            />
+          </div>
+          <div class="modal__input-group">
+            <input
+              type="tel"
+              class="input modal__input"
+              id="phone"
+              placeholder="Phone Number*"
+              name="phone"
+              required
+              minlength="18"
+            />
+          </div>
+          <div class="modal__input-group">
+            <input
+              type="email"
+              class="input modal__input"
+              placeholder="Email*"
+              name="email"
+              required
+            />
+          </div>
+          <textarea
+            class="message modal__message"
+            placeholder="Message"
+            name="message"
+          ></textarea>
+          <button class="modal__button" type="submit">Send</button>
+          <span class="modal__info">* Required Fields</span>
+        </form>
       </div>
-      <!-- /.modal__dialog -->
+      <!-- /.model__dialog -->
     </div>
     <!-- /.modal -->
   </body>
